// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationsProvider/> should provide reducer state and actions 1`] = `
{
  "buttons": [],
  "id": "1",
  "status": "none",
}
`;

exports[`<NotificationsProvider/> should provide reducer state and actions 2`] = `
[
  [
    {
      "payload": {
        "buttons": [],
        "id": "1",
        "status": "none",
      },
      "type": "reapop/upsertNotification",
    },
  ],
]
`;

exports[`<NotificationsProvider/> should provide reducer state and actions 3`] = `
{
  "buttons": [],
  "id": "1",
  "message": "world!",
  "status": "info",
  "title": "hello",
}
`;

exports[`<NotificationsProvider/> should provide reducer state and actions 4`] = `
[
  [
    {
      "payload": {
        "buttons": [],
        "id": "1",
        "message": "world!",
        "status": "info",
        "title": "hello",
      },
      "type": "reapop/upsertNotification",
    },
  ],
]
`;

exports[`<NotificationsProvider/> should provide reducer state and actions 5`] = `
[
  [
    {
      "payload": "1",
      "type": "reapop/dismissNotification",
    },
  ],
]
`;

exports[`<NotificationsProvider/> should provide reducer state and actions 6`] = `
[
  [
    {
      "type": "reapop/dismissNotifications",
    },
  ],
]
`;
